Frequently Asked Questions section added

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 <body class="sora-font ">
     <header class="bg-gradient-to-b from-white via-[#EFEBE3] to-[var(--bg-color)] ">
         <nav class="container mx-auto mt-4">
-            <div class="navbar ">
-                <div class="navbar-start">
-                    <a><img class="w-28" src="assest/logo-header.png" alt=""></a>
+            <div class="flex justify-between items-center">
+                <div class="flex justify-between ">
+                    <div class="">
+                        <a><img class="w-28" src="assest/logo-header.png" alt=""></a>
+                    </div>
                     <div class="dropdown ">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden ">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden  ">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -49,16 +51,16 @@
                     </div>
 
                 </div>
-                <div class="navbar-center hidden lg:flex">
+                <div class=" hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 text-[var(--text-color)]">
                         <li><a>Product</a></li>
                         <li><a>Services</a></li>
                         <li><a>Contact us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end gap-5 hidden lg:flex">
-                    <img src="assest/search.png" alt="">
-                    <img src="assest/shopping-cart.png" alt="">
+                <div class=" gap-5 hidden lg:flex">
+                    <img class="w-10 h-10" src="assest/search.png" alt="">
+                    <img class="w-10 h-10" src="assest/shopping-cart.png" alt="">
                     <a
                         class="btn border-[var(--primary-color)] hover:bg-[var(--primary-color)] hover:text-white">Login</a>
                     <a class="btn bg-[var(--primary-color)] text-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)]
@@ -73,29 +75,32 @@
                         Can <br> Count</span> On, Prices You’ll Love!</h1>
                 <p class="md:w-[799px] mx-auto">Shop your daily essentials at unbeatable prices. From fresh produce to
                     pantry staples, we’ve got you covered every day!</p>
-                <img class="w-1/2 mx-auto" src="assest/hero-vegetables.png" alt="">
+                <img class="w-1/2 animate-pulse  mx-auto" src="assest/hero-vegetables.png" alt="">
             </div>
 
         </div>
     </header>
-    <main class="relative pb-48">
+    <main class="relative pb-60">
         <!-- services section -->
         <div class="p-4 py-10 md:p-32">
             <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Services</h4>
             <div class="md:flex gap-5 ">
-                <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                <div
+                    class="hover:scale-105 text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/service.png" alt="">
                     <h5 class="text-2xl font-semibold">24/7 Services </h5>
                     <p>Some companies offer 24/7 after-sales services, including hardware upgrades, spare parts, and
                         preventive maintenance.</p>
                 </div>
-                <div class=" text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                <div
+                    class="hover:scale-105 text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/delivery.png" alt="">
                     <h5 class="text-2xl font-semibold">Fast Delivery </h5>
                     <p>We pride ourselves on offering fast payment a dedicated customer service team, and ensuring the
                         safe delivery of your parcels.</p>
                 </div>
-                <div class="text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
+                <div
+                    class="hover:scale-105 text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/healthy.png" alt="">
                     <h5 class="text-2xl font-semibold">Healthy Products </h5>
                     <p>Eating a wide variety of nutritious foods, including fruit, vegetables, nuts, seeds, and lean
@@ -109,7 +114,7 @@
             <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Popular Products</h4>
             <div class=" grid  md:grid-cols-5 gap-5">
 
-                <div class=" row-span-3  col-span-2 space-y-4 bg-lime-400 rounded-2xl  px-5">
+                <div class=" row-span-3  col-span-2 space-y-4 bg-gradient-to-r from-[var(--primary-color)] to-green-500 rounded-2xl  px-5">
                     <h3 class="text-3xl pt-10 text-white font-extrabold">30% off</h3>
                     <p>Discover a world of treats, toys, and essentials handpicked for </p>
                     <button class="btn bg-white"> Buy Now</button>
@@ -129,24 +134,24 @@
                     </div>
                 </div>
                 <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
-                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 41.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
                             <h5>4.5</h5>
                         </div>
-                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <h3 class="text-xl font-medium">Tomato 500 g </h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
                 <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
-                    <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
+                    <img class="bg-[var(--bg-color)]" src="assest/image 44.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
                             <img class="" src="assest/fi_2107957.png" alt="">
                             <h5>4.5</h5>
                         </div>
-                        <h3 class="text-xl font-medium">Onion 1 KG</h3>
+                        <h3 class="text-xl font-medium">Potato 1 KG</h3>
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
@@ -249,25 +254,59 @@
         </div>
 
         <!-- Get Grocery News section -->
-        <div class="absolute  -bottom-72 flex justify-between items-center m-4 md:m-32 bg-[var(--bg-color)]">
-            <div>
-                <img src="assest/vegetable-busket.png" alt="">
+        <div
+            class="absolute rounded-2xl   -bottom-80 md:flex justify-between items-center m-4 md:m-32 bg-[var(--bg-color)] p-5 md:py-12 md:px-24">
+            <div class="">
+                <img class="" src="assest/vegetable-busket.png" alt="">
             </div>
-            <div>
-                <h3>Get Grocery News!</h3>
-                <p>Exclusive training tips, ticks, product deals and more.</p>
+            <div class="space-y-2 md:space-y-5 ">
+                <h3 class="text-2xl md:text-4xl font-semibold">Get Grocery News!</h3>
+                <p class="text-xl">Exclusive training tips, ticks, product deals and more.</p>
                 <div>
-                    <input placeholder="Enter email...." type="text">
+                    <input class="p-4 w-full rounded-lg" placeholder="Enter email...." type="text">
                 </div>
                 <button class="btn bg-[var(--primary-color)] text-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)]
                 hover:bg-white">Subscribe</button>
             </div>
         </div>
 
+        <!-- extra section -Accordion using  -->
+
+        <div class="py-10 p-4 md:p-32 space-y-3">
+            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Frequently Asked Questions</h4>
+            <div class="collapse collapse-arrow bg-[var(--bg-color)]">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What is Nature’s Platter?</div>
+                <div class="collapse-content">
+                    <p>Nature’s Platter is a collection of natural food products that are healthy and environmentally friendly.</p>
+                </div>
+            </div>
+            <div class="collapse collapse-arrow bg-[var(--bg-color)]">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">What are the key features of Nature’s Platter?</div>
+                <div class="collapse-content">
+                    <p>100% Natural Ingredients<br>- No Preservatives or Artificial Colors<br>- Healthy & Vegan-Friendly</p>
+                </div>
+            </div>
+            <div class="collapse collapse-arrow bg-[var(--bg-color)]">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">How can I order from Nature’s Platter?</div>
+                <div class="collapse-content">
+                    <p>You can place an order directly from our website by adding products to the cart and checking out.ello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-arrow bg-[var(--bg-color)]">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">Is Nature’s Platter eco-friendly?</div>
+                <div class="collapse-content">
+                    <p>Yes! Our products are sourced sustainably and are 100% eco-friendly.</p>
+                </div>
+            </div>
+        </div>
 
 
     </main>
-    <footer class=" footer pt-72 bg-[var(--primary-color)] text-base-content p-10">
+    <footer class=" footer pt-80 bg-[var(--primary-color)] text-base-content p-10">
         <nav>
             <img src="assest/logo-footer.png" alt="">
             <p class="text-white">Discover a world of treats, toys,<br> and essentials handpicked for your furry friends
