--- a/index.html
+++ b/index.html
@@ -28,47 +28,46 @@
 
 <body class="sora-font ">
     <header class="bg-gradient-to-b from-white via-[#EFEBE3] to-[var(--bg-color)] ">
-        <nav class="container mx-auto mt-4">
-            <div class="flex justify-between items-center">
-                <div class="flex justify-between ">
-                    <div class="">
-                        <a><img class="w-28" src="assest/logo-header.png" alt=""></a>
-                    </div>
-                    <div class="dropdown ">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden  ">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h16" />
-                            </svg>
-                        </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content text-[var(--text-color)]bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li><a>Product</a></li>
-                            <li><a>Services</a></li>
-                            <li><a>Contact us</a></li>
-                        </ul>
-                    </div>
-
+        <nav class="container mx-auto mt-5 ">
+            <div class="flex items-center justify-between">
+                <div class="flex-1">
+                    <a href="#">
+                        <img class="w-28" src="assest/logo-header.png" alt="Logo">
+                    </a>
                 </div>
-                <div class=" hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1 text-[var(--text-color)]">
-                        <li><a>Product</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Contact us</a></li>
-                    </ul>
-                </div>
-                <div class=" gap-5 hidden lg:flex">
-                    <img class="w-10 h-10" src="assest/search.png" alt="">
-                    <img class="w-10 h-10" src="assest/shopping-cart.png" alt="">
-                    <a
-                        class="btn border-[var(--primary-color)] hover:bg-[var(--primary-color)] hover:text-white">Login</a>
+                <div class="hidden lg:flex space-x-8 items-center ">
+                    <a href="#" class="text-lg text-[var(--text-color)] hover:text-green-800">Product</a>
+                    <a href="#" class="text-lg text-[var(--text-color)] hover:text-green-800">Services</a>
+                    <a href="#" class="text-lg text-[var(--text-color)] hover:text-green-800">Contact</a>
+                    <a href=""> <img class="w-10 h-10" src="assest/shopping-cart.png" alt=""></a>
+                    <a href=""><img class="w-10 h-10" src="assest/search.png" alt=""></a>
+                    <a class="btn border-[var(--primary-color)] hover:bg-[var(--primary-color)] hover:text-white">Login</a>
                     <a class="btn bg-[var(--primary-color)] text-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)]
                     hover:bg-white">Register</a>
                 </div>
+                <div class="lg:hidden flex items-center">
+                    <button id="hamburger-btn" class="p-2 rounded-md focus:outline-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
-            <hr class="bg-[var(--primary-color)]  md:hidden h-1 ">
+            <div class="lg:hidden fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-75 hidden">
+                <div class="flex justify-end p-5">
+                    <button id="close-btn" class="text-white text-3xl">×</button>
+                </div>
+                <div class="flex flex-col items-center text-white space-y-5 ">
+                    <a href="#">Product</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Login</a>
+                </div>
+            </div>
         </nav>
+
         <div class="mt-10   px-5">
             <div class="text-center text-[var(--text-color)] space-y-5">
                 <h1 class="text-3xl md:text-5xl font-semibold ">Freshness <span class="text-[var(--primary-color)]">You
@@ -84,7 +83,7 @@
         <!-- services section -->
         <div class="p-4 py-10 md:p-32">
             <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Services</h4>
-            <div class="md:flex gap-5 ">
+            <div class="md:flex gap-5 space-y-5 md:space-y-0  ">
                 <div
                     class="hover:scale-105 text-[var(--text-color)] text-center space-y-5 bg-[var(--bg-color)] p-7 rounded-2xl">
                     <img class="mx-auto" src="assest/service.png" alt="">
@@ -114,15 +113,16 @@
             <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Popular Products</h4>
             <div class=" grid  md:grid-cols-5 gap-5">
 
-                <div class=" row-span-3  col-span-2 space-y-4 bg-gradient-to-r from-[var(--primary-color)] to-green-500 rounded-2xl  px-5">
+                <div
+                    class="hover:scale-105 row-span-3  col-span-2 space-y-4 bg-gradient-to-r from-[var(--primary-color)] to-green-500 rounded-2xl  px-5">
                     <h3 class="text-3xl pt-10 text-white font-extrabold">30% off</h3>
-                    <p>Discover a world of treats, toys, and essentials handpicked for </p>
+                    <p class="text-white">Discover a world of treats, toys, and essentials handpicked for </p>
                     <button class="btn bg-white"> Buy Now</button>
                     <div class="flex justify-end ">
                         <img class="w-" src="assest/vegetable-offer.png" alt="">
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -133,7 +133,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 41.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -144,7 +144,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 44.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -155,7 +155,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -166,7 +166,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -177,7 +177,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -188,7 +188,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -199,7 +199,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class="hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -210,7 +210,7 @@
                         <p class="font-medium">$39.99</p>
                     </div>
                 </div>
-                <div class="flex items-center p-2 gap-5 bg-white rounded-2xl">
+                <div class=" hover:scale-105 flex items-center p-2 gap-5 bg-white rounded-2xl">
                     <img class="bg-[var(--bg-color)]" src="assest/image 43.png" alt="">
                     <div class=" text-[var(--text-color)]">
                         <div class="flex gap-2">
@@ -227,8 +227,8 @@
         <!-- Arrival & Offers section -->
         <div class=" p-4  md:p-32">
             <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Arrival & Offers</h4>
-            <div class="md:grid grid-cols-5  gap-5">
-                <div class="md:col-span-3 flex justify-between items-center bg-[#115414] rounded-2xl ">
+            <div class="flex-wrap grid grid-cols-1 md:grid-cols-5  gap-5">
+                <div class="hover:scale-105 md:col-span-3 flex justify-between items-center bg-[#115414] rounded-2xl ">
                     <div class=" p-5 space-y-5 ">
                         <img src="assest/dawat-logo.png" alt="">
                         <div class="pl-5 space-y-5">
@@ -240,7 +240,8 @@
                         <img src="assest/dawat-mock-up.png" alt="">
                     </div>
                 </div>
-                <div class="md:col-span-2 flex justify-between items-center bg-[#102861] rounded-2xl p-2">
+                <div
+                    class="hover:scale-105 md:col-span-2 flex justify-between items-center bg-[#102861] rounded-2xl p-2">
                     <div class="p-5 space-y-5 ">
                         <img src="assest/india-gate-logo.png" alt="">
                         <button class="btn  bg-blue-400 text-white font-extrabold">World’s No.1 Rice</button>
@@ -271,28 +272,31 @@
         </div>
 
         <!-- extra section -Accordion using  -->
-
         <div class="py-10 p-4 md:p-32 space-y-3">
-            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Frequently Asked Questions</h4>
+            <h4 class="mb-10 text-[var(--primary-color)] text-2xl  md:text-4xl font-semibold">Frequently Asked Questions
+            </h4>
             <div class="collapse collapse-arrow bg-[var(--bg-color)]">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-medium">What is Nature’s Platter?</div>
                 <div class="collapse-content">
-                    <p>Nature’s Platter is a collection of natural food products that are healthy and environmentally friendly.</p>
+                    <p>Nature’s Platter is a collection of natural food products that are healthy and environmentally
+                        friendly.</p>
                 </div>
             </div>
             <div class="collapse collapse-arrow bg-[var(--bg-color)]">
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">What are the key features of Nature’s Platter?</div>
                 <div class="collapse-content">
-                    <p>100% Natural Ingredients<br>- No Preservatives or Artificial Colors<br>- Healthy & Vegan-Friendly</p>
+                    <p>100% Natural Ingredients<br>- No Preservatives or Artificial Colors<br>- Healthy & Vegan-Friendly
+                    </p>
                 </div>
             </div>
             <div class="collapse collapse-arrow bg-[var(--bg-color)]">
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">How can I order from Nature’s Platter?</div>
                 <div class="collapse-content">
-                    <p>You can place an order directly from our website by adding products to the cart and checking out.ello</p>
+                    <p>You can place an order directly from our website by adding products to the cart and checking
+                        out.ello</p>
                 </div>
             </div>
             <div class="collapse collapse-arrow bg-[var(--bg-color)]">
