hr and themes added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,7 @@
 
 <body class="sora-font ">
     <header class="bg-gradient-to-b from-white via-[#EFEBE3] to-[var(--bg-color)] ">
-        <nav class="container mx-auto mt-5 ">
+        <nav class="container mx-auto p-5 ">
             <div class="flex items-center justify-between">
                 <div class="flex-1">
                     <a href="#">
@@ -66,6 +66,7 @@
                     <a href="#">Login</a>
                 </div>
             </div>
+            <hr class="lg:hidden mt-2 border-green-800 ">
         </nav>
 
         <div class="mt-10   px-5">
